# fun-rust-scripts

./: Cargo.toml  LICENSE  README.md
src/: ackermann_function.rs  calculate_alcohol_percentage.rs  calculate_sequence_easy.rs  main.rs  simple_timer.rs  text_game_rpg.rs  text_rpg_game.rs  throughput.rs  utilities.rs
