[package]
name = "fun-rust-scripts"
version = "0.1.0"
edition = "2021"
authors = ["Mateusz Kuniczuk"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }

[dev-dependencies]
rstest = "0.18.2"
